--- a/css/syddjurs-omega-subtheme-alpha-default-wide.css
+++ b/css/syddjurs-omega-subtheme-alpha-default-wide.css
@@ -1,4 +1,5 @@
 /* This file will hold styles that are loaded using the same media query as the wide grid. */
-.attachment_text_container .attachment_text_trimmed_container{
+.attachment_text_container .attachment_text_trimmed_container, .attachment_text_container .attachment_text_full_container{
   max-width: 600px;
+  overflow-y: hidden;
 }
